force-app/main/default/objects/Vente__c/fields/Caisse__c.field-meta.xml
<CustomField>
    <fullName>Caisse__c</fullName>
    <description>Valeur monétaire totale associée à la caisse actuelle</description>
    <formula>Recette__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caisse</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Currency</type>
</CustomField>