force-app/main/default/objects/Vente__c/fields/Deficit__c.field-meta.xml
<CustomField>
    <fullName>Deficit__c</fullName>
    <description>Valeur monaitaire manquant dans la recette</description>
    <label>Déficit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>