force-app/main/default/objects/Vente__c/fields/EpargnerSurplus__c.field-meta.xml
<CustomField>
    <fullName>EpargnerSurplus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champs désignant si le surplus est a epargner ne pas mettre dans la caisse général</description>
    <label>Epargner Surplus</label>
    <type>Checkbox</type>
</CustomField>