force-app/main/default/objects/Vente__c/fields/FinVente__c.field-meta.xml
<CustomField>
    <fullName>FinVente__c</fullName>
    <description>Date à laquelle la vente est clôturée</description>
    <label>Fin Vente</label>
    <required>true</required>
    <type>Date</type>
</CustomField>