force-app/main/default/objects/Vente__c/listViews/VentesAvecDeficit.listView-meta.xml
<ListView>
    <fullName>VentesAvecDeficit</fullName>
    <columns>NAME</columns>
    <columns>FinVente__c</columns>
    <columns>FondDeCaisse__c</columns>
    <columns>Recette__c</columns>
    <columns>Caisse__c</columns>
    <columns>Deficit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Deficit__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Ventes Avec Déficit</label>
</ListView>