force-app/main/default/objects/Vente__c/listViews/VentesAvecRemboursement.listView-meta.xml
<ListView>
    <fullName>VentesAvecRemboursement</fullName>
    <columns>NAME</columns>
    <columns>FinVente__c</columns>
    <columns>FondDeCaisse__c</columns>
    <columns>Recette__c</columns>
    <columns>Caisse__c</columns>
    <columns>Deficit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ARembourse__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Ventes Avec Remboursement</label>
</ListView>