force-app/main/default/objects/Vente__c/listViews/VentesAvecSurplus.listView-meta.xml
<ListView>
    <fullName>VentesAvecSurplus</fullName>
    <columns>NAME</columns>
    <columns>FinVente__c</columns>
    <columns>FondDeCaisse__c</columns>
    <columns>Recette__c</columns>
    <columns>Caisse__c</columns>
    <columns>Deficit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Surplus__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Ventes Avec Surplus</label>
</ListView>