force-app/main/default/objects/Vente__c/listViews/Vuerecemment.listView-meta.xml
<ListView>
    <fullName>Vuerecemment</fullName>
    <columns>NAME</columns>
    <columns>FinVente__c</columns>
    <columns>FondDeCaisse__c</columns>
    <columns>Recette__c</columns>
    <columns>Caisse__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Vue récemment</label>
</ListView>